Option to observe data logs